load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "ecsact_interpret",
    srcs = glob(["ecsact/interpret/**/*.h", "ecsact/interpret/**/*.cc", "ecsact/interpret/**/*.hh"]),
    hdrs = glob(["ecsact/interpret/*.h"]),
    copts = copts,
    deps = [
        "//parse-resolver-runtime",
        "@ecsact_parse",
    ],
)
