module(
    name = "ecsact_interpret",
    version = "0.5.3",
    compatibility_level = 5,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "magic_enum", version = "0.9.3")
bazel_dep(name = "ecsact_runtime", version = "0.5.4")
bazel_dep(name = "ecsact_parse", version = "0.3.3")
