load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ecsact_interpreter",
    copts = copts,
    srcs = ["ecsact_interpreter_cli.cc"],
    deps = [
        "//:ecsact_interpret",
    ],
)

filegroup(
    name = "cli",
    srcs = [":ecsact_interpreter"],
)
