load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//:__subpackages__"])

cc_library(
    name = "parse-resolver-runtime",
    srcs = ["parse-resolver-runtime.cc", "assoc.cc"],
    copts = copts,
    defines = [
        "ECSACT_DYNAMIC_API=\"\"",
        "ECSACT_META_API=\"\"",
    ],
    deps = [
        "@ecsact_runtime//:dynamic",
        "@ecsact_runtime//:meta",
    ],
)
