load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//bazel:copts.bzl", "copts")

cc_library(
    name = "test_lib",
    hdrs = ["test_lib.hh"],
    visibility = ["//test:__subpackages__"],
    deps = [
        "//:ecsact_interpret",
        "@bazel_sundry//bazel_sundry:runfiles",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cc"],
    copts = copts,
    data = ["test.ecsact"],
    deps = [
        "//:ecsact_interpret",
        "@bazel_sundry//bazel_sundry:runfiles",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "comment_before_package",
    srcs = ["comment_before_package.cc"],
    copts = copts,
    data = ["comment_before_package.ecsact"],
    deps = [
        ":test_lib",
        "//:ecsact_interpret",
        "@bazel_sundry//bazel_sundry:runfiles",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "multi_pkg",
    srcs = ["multi_pkg.cc"],
    copts = copts,
    data = [
        "multi_pkg_a.ecsact",
        "multi_pkg_b.ecsact",
        "multi_pkg_c.ecsact",
        "multi_pkg_main.ecsact",
    ],
    deps = [
        ":test_lib",
        "//:ecsact_interpret",
        "@bazel_sundry//bazel_sundry:runfiles",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "anonymous_system",
    srcs = ["anonymous_system.cc"],
    copts = copts,
    data = [
        "anonymous_system.ecsact",
    ],
    deps = [
        ":test_lib",
        "//:ecsact_interpret",
        "@bazel_sundry//bazel_sundry:runfiles",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)
