load("@rules_cc//cc:defs.bzl", "cc_test")
load("@ecsact_interpret//bazel:copts.bzl", "copts")

_TESTS = [
    "invalid_notify_settings",
    "no_capabilities",
    "no_package_statement_first",
    "unknown_association_field",
]

[cc_test(
    name = test,
    srcs = ["{}.cc".format(test)],
    copts = copts,
    data = ["{}.ecsact".format(test)],
    args = ["--gtest_catch_exceptions=0"],
    deps = [
        "//:test_lib",
        "@ecsact_interpret",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
) for test in _TESTS]
